[project]
name = "chess2"
version = "0.1.0"
description = "A new way to play chess"
authors = [
    {name = "andrewpetrav",email = "andrewpetravicius1@gmail.com"}
]
license = {text = "Go for it"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    keyboard==0.13.5
    pygame==2.6.0
    pygame-menu==4.4.3
    pynput==1.7.7
    pyperclip==1.9.0
    six==1.16.0
    typing_extensions==4.12.2
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
